[project]
name = "ml-env"
version = "0.1.0"
description = "Laboration - Robust Miljöhantering för maskininlärning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "scikit-learn",
    "pandas",
    "jupyter",
]

# PyTorch CUDA index för NVIDIA grafikkort
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
